# ssd

./: .gitignore  LICENSE  README.md  eagle_details.md  pyproject.toml  test_unified_mask.py
bench/: bench.py  bench_helpers.py  bench_paths.py  bench_sglang.py  bench_sglang_server.py  bench_vllm.py  bench_vllm_server.py  chat.py  launch_sglang_server.sh  launch_vllm_server.sh  run_sglang_bench.py  run_vllm_bench.py  server_lifecycle.py  test_bench_paths.py  test_server_lifecycle.py
debug_outputs/: draft_prefill_inputs.pt
scripts/: acceptance_rates.py  alpha.py  check_temp_overlap.py  download_from_hf.py  draft_target_sweep.py  dts.py  dts_plot_data.pkl  get_data_from_hf.py  get_eagles_from_hf.py  get_llamas_from_hf.py  get_pythias_from_hf.py  get_qwens_from_hf.py  hf_verify.py  plot_helpers.py  spec_hf.py  try_70b.py
ssd/: __init__.py  compare.py  config.py  llm.py  paths.py  sampling_params.py
ssd/engine/: block_manager.py  draft_runner.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py  speculator_async.py  speculator_sync.py  step.py  verifier.py
ssd/engine/helpers/: claude_triton_mask_v2.py  cudagraph_helpers.py  mask_helpers.py  (+4 more)
ssd/layers/: attention.py  embed_head.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py
ssd/models/: bench_eagle_draft.py  eagle3_draft_llama3.py  llama3.py  qwen3.py  ref.py  test_ref_with_saved_inputs.py
ssd/utils/: context.py  dist_utils.py  loader.py  misc.py  verify.py
tests/: collect_results.sh  launch_tests.sh  reference_test_outputs.md  test_config_lazy_defaults.py  test_get_data_from_hf_paths.py
(+4 files in other folders)
