[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd"
version = "0.2.0"
authors = [{ name = "Tanishq Kumar" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "Async tree-based speculative decoding research engine"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.9.1",
    "triton",
    "transformers==4.57.1",
    "xxhash",
    "numpy",
    "safetensors",
    "tqdm",
    "flashinfer-python==0.6.2",
    "sgl-kernel==0.3.21",
    "nvidia-cutlass-dsl>=4.3.4",
    "wandb==0.22.0",
    "hf_transfer",
    "tiktoken",
]

[project.urls]
Homepage="https://github.com/tanishqkumar/ssd"

[tool.setuptools.packages.find]
where = ["."]
include = ["ssd*"]
